envoy/envoy-sidecar.yaml
node:
  id: ztlab-envoy
  cluster: ztlab-financial

admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: inbound_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 15006
      listener_filters:
        - name: envoy.filters.listener.tls_inspector
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      filter_chains:
        - filter_chain_match:
            transport_protocol: tls
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              require_client_certificate: true
              common_tls_context:
                tls_certificate_sds_secret_configs:
                  - name: __SPIFFE_ID__
                    sds_config:
                      initial_fetch_timeout: 5s
                      api_config_source:
                        api_type: GRPC
                        transport_api_version: V3
                        grpc_services:
                          - envoy_grpc:
                              cluster_name: spire_agent
                validation_context_sds_secret_config:
                  name: ROOTCA
                  sds_config:
                    initial_fetch_timeout: 5s
                    api_config_source:
                      api_type: GRPC
                      transport_api_version: V3
                      grpc_services:
                        - envoy_grpc:
                            cluster_name: spire_agent
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: inbound_mtls_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      log_format:
                        json_format:
                          timestamp: "%START_TIME%"
                          method: "%REQ(:METHOD)%"
                          path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                          response_code: "%RESPONSE_CODE%"
                          response_time: "%DURATION%"
                          upstream: "%UPSTREAM_HOST%"
                          source_ip: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
                          bytes_sent: "%BYTES_SENT%"
                          trace_id: "%REQ(X-TRACE-ID)%"
                          svid: "%DOWNSTREAM_PEER_URI_SAN%"
                route_config:
                  name: inbound_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: local_service
                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      transport_api_version: V3
                      failure_mode_allow: false
                      include_peer_certificate: true
                      grpc_service:
                        envoy_grpc:
                          cluster_name: opa_ext_authz
                        timeout: 2s
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: inbound_plain_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      log_format:
                        json_format:
                          timestamp: "%START_TIME%"
                          method: "%REQ(:METHOD)%"
                          path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                          response_code: "%RESPONSE_CODE%"
                          response_time: "%DURATION%"
                          upstream: "%UPSTREAM_HOST%"
                          source_ip: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
                          bytes_sent: "%BYTES_SENT%"
                          trace_id: "%REQ(X-TRACE-ID)%"
                          svid: "%DOWNSTREAM_PEER_URI_SAN%"
                route_config:
                  name: inbound_plain_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: local_service
                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      transport_api_version: V3
                      failure_mode_allow: false
                      include_peer_certificate: true
                      grpc_service:
                        envoy_grpc:
                          cluster_name: opa_ext_authz
                        timeout: 2s
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    - name: outbound_listener
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 15001
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: outbound_http
                route_config:
                  name: outbound_route
                  virtual_hosts:
                    - name: financial_services
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/payments"
                          route:
                            cluster: payment_service
                        - match:
                            prefix: "/score"
                          route:
                            cluster: fraud_detection
                        - match:
                            prefix: "/notify"
                          route:
                            cluster: notification_service
                        - match:
                            prefix: "/transactions/execute"
                          route:
                            cluster: core_banking
                        - match:
                            prefix: "/transactions"
                          route:
                            cluster: transaction_service
                        - match:
                            prefix: "/accounts"
                          route:
                            cluster: account_service
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: spire_agent
      connect_timeout: 1s
      type: STATIC
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: spire_agent
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    pipe:
                      path: /run/spire/sockets/agent.sock

    - name: opa_ext_authz
      connect_timeout: 2s
      type: STRICT_DNS
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: opa_ext_authz
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: opa-service.financial.svc.cluster.local
                      port_value: 9191

    - name: local_service
      connect_timeout: 1s
      type: STATIC
      load_assignment:
        cluster_name: local_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080

    - name: payment_service
      connect_timeout: 2s
      type: STRICT_DNS
      wait_for_warm_on_init: false
      transport_socket: &upstream_mtls
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            tls_certificate_sds_secret_configs:
              - name: __SPIFFE_ID__
                sds_config:
                  initial_fetch_timeout: 5s
                  api_config_source:
                    api_type: GRPC
                    transport_api_version: V3
                    grpc_services:
                      - envoy_grpc:
                          cluster_name: spire_agent
            combined_validation_context:
              default_validation_context:
                match_subject_alt_names:
                  - safe_regex:
                      google_re2: {}
                      regex: "spiffe://ztlab\\.local/.*"
              validation_context_sds_secret_config:
                name: ROOTCA
                sds_config:
                  initial_fetch_timeout: 5s
                  api_config_source:
                    api_type: GRPC
                    transport_api_version: V3
                    grpc_services:
                      - envoy_grpc:
                          cluster_name: spire_agent
      load_assignment:
        cluster_name: payment_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: payment-service.financial.svc.cluster.local
                      port_value: 8080

    - name: fraud_detection
      connect_timeout: 2s
      type: STRICT_DNS
      wait_for_warm_on_init: false
      transport_socket: *upstream_mtls
      load_assignment:
        cluster_name: fraud_detection
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: fraud-detection.financial.svc.cluster.local
                      port_value: 8080

    - name: notification_service
      connect_timeout: 2s
      type: STRICT_DNS
      wait_for_warm_on_init: false
      transport_socket: *upstream_mtls
      load_assignment:
        cluster_name: notification_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: notification-service.financial.svc.cluster.local
                      port_value: 8080

    - name: core_banking
      connect_timeout: 8s
      type: STRICT_DNS
      wait_for_warm_on_init: false
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            tls_certificate_sds_secret_configs:
              - name: __SPIFFE_ID__
                sds_config:
                  initial_fetch_timeout: 10s
                  api_config_source:
                    api_type: GRPC
                    transport_api_version: V3
                    grpc_services:
                      - envoy_grpc:
                          cluster_name: spire_agent
            combined_validation_context:
              default_validation_context:
                match_subject_alt_names:
                  - safe_regex:
                      google_re2: {}
                      regex: "spiffe://ztlab\\.local/.*"
              validation_context_sds_secret_config:
                name: ROOTCA
                sds_config:
                  initial_fetch_timeout: 10s
                  api_config_source:
                    api_type: GRPC
                    transport_api_version: V3
                    grpc_services:
                      - envoy_grpc:
                          cluster_name: spire_agent
      load_assignment:
        cluster_name: core_banking
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: core-banking.financial.svc.cluster.local
                      port_value: 15006  # k8s core-banking Envoy inbound mTLS

    - name: account_service
      connect_timeout: 2s
      type: STRICT_DNS
      wait_for_warm_on_init: false
      transport_socket: *upstream_mtls
      load_assignment:
        cluster_name: account_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: account-service.financial.svc.cluster.local
                      port_value: 15006  # account-service Envoy inbound mTLS

    - name: transaction_service
      connect_timeout: 2s
      type: STRICT_DNS
      wait_for_warm_on_init: false
      transport_socket: *upstream_mtls
      load_assignment:
        cluster_name: transaction_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: transaction-service.financial.svc.cluster.local
                      port_value: 15006  # transaction-service Envoy inbound mTLS
